<resources>
    <string name="app_name">CS246 App</string>
    <string name="call_alan_button">Call Alan</string>
    <string name="do_i_need_a_lawyer_button">Do I Need A Lawyer?</string>
    <string name="my_case_button">My Case</string>
    <string name="copyright_text">"© 2021 The Law Offices of Alan LeVar "</string>
    <string name="levar_logo_description">Levar Logo</string>
    <string name="free_case_review_button">Free Case Review</string>
    <string name="do_i_need_a_lawyer_text">This is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of textThis is going to be a ton of text</string>
    <string name="pain_journal_button">Pain Journal</string>
    <string name="send_photo_button">Requested Photos</string>
    <string name="quote">This app is to provide reassurance to those that are in the middle of a law suit, as well as remind people
    that they need to be journaling daily</string>
    <string name="pain_journal_prompt">The more descriptive you can be, the better we can help.</string>
    <string name="send_button">Submit</string>
    <string name="add_photo_button">Add Photo of Injury</string>
    <string name="spinner_prefix">My Case Type: </string>
    <string name="upload_button">Upload</string>
</resources>