<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:actionBarNavMode="standard"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/callButton"
        android:layout_width="230dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:onClick="call"
        android:text="@string/call_alan_button"
        android:textColor="#FFFFFF"
        app:backgroundTint="#7E8083"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/lawyerButton"
        android:layout_width="230dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:onClick="openLawyerAct"
        android:text="@string/do_i_need_a_lawyer_button"
        android:textColor="#FFFFFF"
        app:backgroundTint="#194165"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callButton" />

    <Button
        android:id="@+id/caseButton"
        android:layout_width="230dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:onClick="openCaseActivity"
        android:text="@string/my_case_button"
        android:textColor="#FFFFFF"
        app:backgroundTint="#0E6698"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lawyerButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="232dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/levar_logo_description"
        android:src="@drawable/square_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/square_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/copyright_text"
        android:textColor="#070707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:text="Notification"
        app:backgroundTint="#194165"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caseButton" />

</androidx.constraintlayout.widget.ConstraintLayout>